--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Flatearth dating Admin</title>
+  <title>FlatEarth.dating Admin</title>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
   <meta content="Find like minded male or female unvaccinated flatearth humans!" name="description" />
   <meta
-  content="Flatearth dating Admin"
+  content="FlatEarth.dating Admin"
   name="keyword"
   />
   <link href="assets/profile.png" rel="icon" type="image/x-icon">
